Fixed some z-index issues.
The blue bar that was displayed “under” the page had z-index of -1 and
after the previous change improving text/html “compatibility”, the it
stopped displaying.  Changing it to any other value caused it to be
showed “on top of” the page.  The simple solution was to add z-index
to the div element wrapping the whole of the content of the web
page (this of course required also adding positioning to it).

--- a/src/css.css
+++ b/src/css.css
@@ -136,6 +136,8 @@ img.NewsImage, #w {
 		padding: 1em;
 		background: #FFF;
 		width: 62em;
+		position: relative;
+		z-index: 2;
 	}
 
 	#W, #J, .C {
@@ -150,7 +152,7 @@ img.NewsImage, #w {
 		width: 100%;
 		height: 14em;
 		background: #33F;
-		z-index: -1;
+		z-index: 1;
 	}
 
 	#H, #H img {
@@ -170,7 +172,6 @@ img.NewsImage, #w {
 	#H > * {
 		position: absolute;
 		white-space: nowrap;
-		z-index: 2;
 	}
 
 	#H h1, #J {
